--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -8,7 +8,12 @@
 }
 a{
     text-decoration: none;
-    color: wheat;
+    color: rgb(1, 95, 102);
+    /* outline: brown; */
+}
+a:hover {
+    border-bottom: 1px solid brown;
+
 }
 .logo{
     padding: 0 30px;
