--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,8 @@
     padding: 0;
     border: 0;
 }
+
+:root {
+    --font-family-header: 'Open Sans', sans-serif;
+    --font-family-para: 'Roboto', sans-serif;
+}
