--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,28 @@
     margin: 0;
     padding: 0;
     border: 0;
+    box-sizing: border-box;
 }
 
 :root {
     --font-family-header: 'Open Sans', sans-serif;
-    --font-family-para: 'Roboto', sans-serif;
+    --font-family-para: 'Roboto', sans-serif;   
+    --navbar-height: 70px;
+}
+
+.pagesContainer{
+    padding-top: var(--navbar-height);
+}
+
+a{
+    text-decoration: none;
+}
+
+.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    /* height: 100%;
+    width: 100%; */
 }
