product page styled

--- a/src/Components/CategoryList/CategoryList.css
+++ b/src/Components/CategoryList/CategoryList.css
@@ -1,7 +1,7 @@
 .category-list{
     display: grid;
     grid-template-columns: 1fr;
-    background: tomato;
+    /* background: tomato; */
     /* row-gap: 150px; */
     justify-items: center;
 }
