--- a/src/Pages/Category/Category.css
+++ b/src/Pages/Category/Category.css
@@ -3,7 +3,7 @@
     display: grid;
     grid-template-columns: 80vw;
     grid-template-rows: minmax(calc(100vh - var(--navbar-height)), min-content);
-    background: turquoise;
+    /* background: turquoise; */
     justify-content: center;
     padding-top: 150px;
 }
