--- a/src/App.css
+++ b/src/App.css
@@ -15,8 +15,12 @@
     padding-top: var(--navbar-height);
 }
 
-a{
+html a{
     text-decoration: none;
+    color: inherit;
+}
+html a:hover{
+    color: rgba(0, 0, 0, 0.7);
 }
 
 .center {
