--- a/src/Components/CategoryListItem/CategoryListItem.css
+++ b/src/Components/CategoryListItem/CategoryListItem.css
@@ -2,16 +2,17 @@
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     position: relative;
-    grid-column-gap: 30px ;
-    margin-bottom: 15em;
+    grid-column-gap: 70px ;
+    margin-bottom: 17em;
 }
 
 .category-name{
     position: absolute;
     top: 0;
     left: 50%;
-    /* transform: translate(-50%, -50%); */
+    transform: translate(-50%, -70%);
     font-size: 150px;
     letter-spacing: 30px;
     text-transform: uppercase;
+
 }
