--- a/src/Components/ProductCard/ProductCard.css
+++ b/src/Components/ProductCard/ProductCard.css
@@ -4,6 +4,7 @@
     box-shadow: 0px 5px 10px 5px rgba(0, 0, 0, 0.3);
     cursor: pointer;
     position: relative;
+    background: white;
 }
 
 .product_card_image{
@@ -12,7 +13,7 @@
     /* background: url(./../../Assests/image/1-1170x750.jpg); */
     background-position: center;
     background-repeat: no-repeat;
-    background-size: 200% 150%, cover;
+    background-size: 100% 100%, cover;
 }
 
 .product_card_hover{
@@ -20,8 +21,8 @@
     width: 100%;
     background: rgba(0, 0, 0, 0.3); 
     position: absolute;
-    transition: transform 300ms ease-out;
     transform: scaleX(0);
+    transition: transform 300ms ease-out;
     transform-origin: left;
 }
 
