--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,9 @@ html a:hover{
     color: rgba(0, 0, 0, 0.7);
 }
 
+button{
+    font-size: inherit;
+}
 .center {
     display: flex;
     justify-content: center;
